hsmc-macros/tests/ui/t9_6_empty_state.stderr
error: empty state `Empty`
  --> tests/ui/t9_6_empty_state.rs:14:11
   |
14 |     state Empty {}
   |           ^^^^^
